# schemagit

./: .gitignore  CHANGE_LOG.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  docker-compose.yml  rustfmt.toml  schema.md
.github/: dependabot.yml
.github/instructions/: rust.instructions.md
.github/workflows/: ci.yml  pr.yml  release.yml  security.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  output.rs
crates/cli/src/commands/: diff.rs  docs.rs  export.rs  graph.rs  history.rs  list.rs  migrate.rs  mod.rs  output.rs  show.rs  snapshot.rs  snapshots.rs  status.rs  summary.rs  tag.rs  timeline.rs  utils.rs  validate.rs
crates/core/: Cargo.toml
crates/core/src/: column.rs  docs_generator.rs  foreign_key.rs  graph_builder.rs  index.rs  lib.rs  schema.rs  schema_graph.rs  table.rs
crates/core/src/renderers/: dot.rs  html.rs  json.rs  mermaid.rs  mod.rs
crates/core/templates/: graph.html
crates/diff/: Cargo.toml
crates/diff/src/: lib.rs
crates/introspector/: Cargo.toml
crates/introspector/src/: lib.rs  mssql.rs  postgres.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  mssql.rs  postgres.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: lib.rs
scripts/: release.sh
