[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/introspector",
    "crates/diff",
    "crates/migration",
    "crates/snapshot"
]

resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"

authors = ["Võ Đức Huy"]
description = "Database schema versioning and inspection CLI tool. Track database schema changes like you track code with Git."

license = "MIT"
readme = "README.md"

repository = "https://github.com/vdhuyme/schemagit"
homepage = "https://github.com/vdhuyme/schemagit"
documentation = "https://docs.rs/schemagit"

keywords = [
    "database",
    "schema",
    "migration",
    "versioning",
    "cli"
]

categories = [
    "command-line-utilities",
    "database",
    "development-tools"
]
