[package]
name = "schemagit-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "schemagit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "3.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

schemagit-core = { path = "../core" }
schemagit-introspector = { path = "../introspector" }
schemagit-snapshot = { path = "../snapshot" }
schemagit-diff = { path = "../diff" }
schemagit-migration = { path = "../migration" }
