[package]
name = "schemagit-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "schemagit"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
schemagit-core = { path = "../core" }
schemagit-diff = { path = "../diff" }
schemagit-introspector = { path = "../introspector" }
schemagit-migration = { path = "../migration" }
schemagit-snapshot = { path = "../snapshot" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
