[package]
name = "schemagit-introspector"
version.workspace = true
edition.workspace = true

[dependencies]
schemagit-core = { path = "../core" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
async-trait = "0.1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
url = "2"
tiberius = { version = "0.12", default-features = false, features = ["rustls"] }
percent-encoding = "2"