[package]
name = "schemagit-introspector"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
percent-encoding = "2"
schemagit-core = { path = "../core" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
thiserror = "2.0.18"
tiberius = { version = "0.12", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
url = "2"
